# file2stix

./: .gitignore  .gitmodules  404.html  LICENSE  README.md  extract_observables.py  index.html  main.py  mkdocs.yml  observables_stix_store.py  requirements.txt  setup.cfg  setup.py
.github/: workflows
.github/workflows/: docs.yml  main.yml
backends/: index.html
backends/arangodb/: arangodb.py  arangodb.yml  schemas.py
demo/: index.html
developers/: index.html
docs/: backends.md  conversions.md  demo.md  developers.md  extractions-analysis-mode.md  extractions-observed-mode.md  extractions-sightings-mode.md  extractions.md  index.md  inputs.md  mkdocs.yml  requirements.txt  whitelists.md
docs/backends/: index.md
docs/whitelists/: index.md
examples/: input.txt  input2.txt  mandiant-apt1.txt
extractions/: index.html
extractions-analysis-mode/: index.html
extractions-observed-mode/: index.html
extractions-sightings-mode/: index.html
file2stix/: __init__.py  arangodb.py  cache.py  cli.py  config.py  error_handling.py  extract_observables.py  helper.py  main.py  observables.py  observables_stix_store.py
file2stix/backends/: arangodb.py
inputs/: index.html
obstracts_cli/: __init__.py  cache.py  cli.py  config.py  extract_observables.py  helper.py  main.py  observables.py  observables_stix_store.py
pattern2sco/: __init__.py  cli.py  custom_objects.py  get_sco_object.py  main.py
search/: search_index.json
stix_templates/: extension-definition.yml  identity.yml  marking-definition.yml  tlp_amber.yml  tlp_white.yml
stixify/: __init__.py  cli.py  config.py  extract_observables.py  helper.py  main.py  observables.py
tests/: conftest.py  test_file2stix.py  test_obstracts_cli.py
(+212 files in other folders)
