[metadata]
name = stixify
version = 0.0.1

[options]
packages = stixify
install_requires =
    stix2==3.0.1
    stix2-patterns==2.0.0
    pycountry==22.3.5
    validators==0.20.0
    GitPython==3.1.27
    textract==1.6.5
    pymispwarninglists==1.4

[options.entry_points]
console_scripts =
    stixify = stixify.cli:cli
