[metadata]
name = file2stix
version = 0.0.1

[options]
packages = file2stix
install_requires =
    stix2==3.0.1
    stix2-patterns==2.0.0
    pycountry==22.3.5
    validators==0.20.0
    GitPython==3.1.27
    textract==1.6.5
    pymispwarninglists==1.4
    PyYAML==6.0

[options.entry_points]
console_scripts =
    file2stix = file2stix.cli:cli

[options.packages.find]
where = file2stix

[options.package_data]
file2stix = stix_templates/*.yml