[metadata]
name = file2stix
version = 0.1

[options]
packages = 
    file2stix
install_requires =
    pattern2sco @ git+https://github.com/signalscorps/pattern2sco.git@main
    stix2==3.0.1
    stix2-patterns==2.0.0
    pycountry==22.3.5
    validators==0.20.0
    GitPython==3.1.27
    textract==1.6.5
    pymispwarninglists==1.4
    PyYAML==6.0
    certifi==2022.6.15.1
    charset-normalizer==2.1.1
    DateTime==4.5
    future==0.18.2
    idna==3.3
    pyArango==2.0.1
    pydantic==1.10.2
    pytz==2022.2.1
    requests==2.28.1
    typing-extensions==4.3.0
    urllib3==1.26.12
    zope.interface==5.4.0
    mkdocs-material==8.5.6
    mike==1.1.2

[options.entry_points]
console_scripts =
    file2stix = file2stix.cli:cli

[options.packages.find]
where = file2stix

[options.package_data]
file2stix = stix2-objects/**
